<resources>
    <string name="app_name">xchen10-FeelsBook</string>
    <string name="add">Add</string>
    <string name="please_choose_one_of_the_emotions_below">Please choose one of the emotions below:</string>
    <string name="love">Love</string>
    <string name="joy">Joy</string>
    <string name="surprise">Surprise</string>
    <string name="sadness">Sadness</string>
    <string name="fear">Fear</string>
    <string name="anger">Anger</string>
    <string name="stats">stats</string>
    <string name="submit">Submit</string>
    <string name="write_your_comments_here">Write your comments here</string>
    <string name="delete">delete</string>
    <string name="date">Date:</string>
    <string name="feeling">Feeling:</string>
    <string name="feeling_stats">Feeling Stats</string>
</resources>
